tests/macros/confirm/choices.rs
fn main() {
    requestty::questions![Confirm { choices: todo!() }];
}
